Desarrollo de userform e integracion de firebase

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,9 +5,14 @@
                 <mat-icon mat-list-icon class="chevron-button" [ngClass]="{ rotated: expanded }">chevron_right</mat-icon>
             </mat-list-item>
 
-            <mat-list-item>
-                <mat-icon mat-list-icon>home</mat-icon>
-                <span *ngIf="expanded" class="menu-item">Home</span>
+            <mat-list-item [routerLink]="'userform'">
+                <mat-icon mat-list-icon>edit</mat-icon>
+                <span *ngIf="expanded" class="menu-item">User Form</span>
+            </mat-list-item>
+
+            <mat-list-item [routerLink]="'userlist'">
+                <mat-icon mat-list-icon>group</mat-icon>
+                <span *ngIf="expanded" class="menu-item">User LIst</span>
             </mat-list-item>
         </mat-nav-list>
     </mat-sidenav>
@@ -15,7 +20,7 @@
     <mat-sidenav-content>
         <app-header></app-header>
         <div class="content">
-            <app-userform></app-userform>
+            <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
