--- a/src/app/components/home/users/userform/userform.component.html
+++ b/src/app/components/home/users/userform/userform.component.html
@@ -9,13 +9,32 @@
 </mat-form-field>
 
 <mat-form-field class="fields">
+    <mat-label>Cellphone</mat-label>
+    <input matInput [(ngModel)]="user.cellphone">
+</mat-form-field>
+
+<mat-form-field class="fields">
     <mat-label>Email</mat-label>
-    <input matInput [(ngModel)]="user.email">
+    <input type="email" matInput [(ngModel)]="user.email">
+</mat-form-field><br>
+
+<mat-form-field class="fields">
+    <mat-label>Password</mat-label>
+    <input matInput [(ngModel)]="user.password" [type]="hide ? 'password' : 'text'"/>
+    <button
+      mat-icon-button
+      matSuffix
+      (click)="clickEvent()"
+      [attr.aria-label]="'Hide password'"
+    >
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
 </mat-form-field>
 
 <mat-form-field>
-    <mat-label>Password</mat-label>
-    <input matInput [(ngModel)]="user.password">
+    <mat-label>Department</mat-label>
+    <input matInput [(ngModel)]="user.department">
 </mat-form-field><br>
 
-<button mat-flat-button color="primary" (click)="submit()">Aceptar</button>
+<button *ngIf="user.id == ''" mat-flat-button color="primary" (click)="addUser()">Add User</button>
+<button *ngIf="user.id != ''" mat-flat-button color="primary" (click)="editUser()">Edit User</button>
