--- a/src/app/components/home/users/userlist/userlist.component.html
+++ b/src/app/components/home/users/userlist/userlist.component.html
@@ -9,19 +9,32 @@
         <td mat-cell *matCellDef="let user"> {{user.lastName}}</td>
     </ng-container>
 
+    <ng-container matColumnDef="cellphone">
+        <th mat-header-cell *matHeaderCellDef> Cellphone </th>
+        <td mat-cell *matCellDef="let user"> {{user.cellphone}}</td>
+    </ng-container>
+
     <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> Email </th>
         <td mat-cell *matCellDef="let user"> {{user.email}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="password">
-        <th mat-header-cell *matHeaderCellDef> Password </th>
-        <td mat-cell *matCellDef="let user"> {{user.password}}</td>
+    <ng-container matColumnDef="department">
+        <th mat-header-cell *matHeaderCellDef> Department </th>
+        <td mat-cell *matCellDef="let user"> {{user.department}}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef>Edit, Delete</td>
+        <td mat-cell *matCellDef="let user">
+            <button mat-icon-button matTooltip="Edit" color="green" (click)="edit(user)">
+                <mat-icon>edit</mat-icon>
+            </button>
+
+            <button mat-icon-button matTooltip="Delete" color="warn" (click)="deleteUser(user)">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
