--- a/src/app/modules/home/users/userform/userform.component.html
+++ b/src/app/modules/home/users/userform/userform.component.html
@@ -1,24 +1,24 @@
-<mat-form-field class="fields">
-    <mat-label>First Name</mat-label>
-    <input matInput [(ngModel)]="user.firstName">
+<mat-form-field class="fields" style="width: 30%;">
+    <mat-label>Full Name</mat-label>
+    <input matInput [(ngModel)]="user.name">
 </mat-form-field>
 
-<mat-form-field class="fields">
-    <mat-label>Last Name</mat-label>
-    <input matInput [(ngModel)]="user.lastName">
-</mat-form-field>
+<mat-form-field class="fields" style="width: 30%;">
+    <mat-label>Address</mat-label>
+    <input matInput [(ngModel)]="user.address">
+</mat-form-field><br>
 
 <mat-form-field class="fields">
     <mat-label>Cellphone</mat-label>
     <input matInput [(ngModel)]="user.cellphone">
 </mat-form-field>
 
-<mat-form-field class="fields">
+<mat-form-field class="fields" style="width: 15%;">
     <mat-label>Email</mat-label>
     <input type="email" matInput [(ngModel)]="user.email">
-</mat-form-field><br>
+</mat-form-field>
 
-<mat-form-field class="fields">
+<mat-form-field class="fields" style="width: 20%;">
     <mat-label>Password</mat-label>
     <input matInput [(ngModel)]="user.password" [type]="hide ? 'password' : 'text'"/>
     <button
