--- a/src/app/modules/home/users/userlist/userlist.component.html
+++ b/src/app/modules/home/users/userlist/userlist.component.html
@@ -1,12 +1,17 @@
-<table mat-table class="mat-elevation-z8; width: 70%" [dataSource]="dataSource">
-    <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef> First Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.firstName}}</td>
+<mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput [(ngModel)]="filterContent">
+</mat-form-field>
+
+<table mat-table class="mat-elevation-z8; width: 70%" [dataSource]="dataSource.data|filter:filterContent">
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let user"> {{user.name}}</td>
     </ng-container>
-    
-    <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef> Last Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.lastName}}</td>
+
+    <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef> Address </th>
+        <td mat-cell *matCellDef="let user"> {{user.address}}</td>
     </ng-container>
 
     <ng-container matColumnDef="cellphone">
