--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-card>
-    <mat-card-content>Footer</mat-card-content>
-</mat-card>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>Footer</mat-toolbar-row>
+</mat-toolbar>
