--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-    <span>Users CRUD</span>
+    <span appHighlight>Users CRUD</span>
     <span class="flex: 1 1 auto;"></span>
 </mat-toolbar>
