--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -1,6 +1,8 @@
 mat-sidenav-container {
     height: 100%;
-  
+    min-height: 100%;
+    max-height: 100%;
+
     mat-sidenav {
       mat-nav-list {
         .menu-item {
