--- a/src/app/modules/home/users/userlist/userlist.component.html
+++ b/src/app/modules/home/users/userlist/userlist.component.html
@@ -1,9 +1,9 @@
-<mat-form-field>
+<mat-form-field style="width: 20%;">
     <mat-label>Filter</mat-label>
     <input matInput [(ngModel)]="filterContent">
 </mat-form-field>
 
-<table mat-table class="mat-elevation-z8; width: 70%" [dataSource]="dataSource.data|filter:filterContent">
+<table mat-table class="mat-elevation-z8" style=" width: 70%" [dataSource]="dataSource.data|filter:filterContent">
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let user"> {{user.name}}</td>
@@ -15,7 +15,7 @@
     </ng-container>
 
     <ng-container matColumnDef="cellphone">
-        <th mat-header-cell *matHeaderCellDef> Cellphone </th>
+        <th mat-header-cell *matHeaderCellDef> Phone Number </th>
         <td mat-cell *matCellDef="let user"> {{user.cellphone}}</td>
     </ng-container>
 
@@ -30,14 +30,14 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let user">
-            <button mat-icon-button matTooltip="Edit" color="green" (click)="edit(user)">
+            <button mat-icon-button matTooltip="Edit" style="color: green;" (click)="edit(user)">
                 <mat-icon>edit</mat-icon>
             </button>
 
             <button mat-icon-button matTooltip="Delete" color="warn" (click)="deleteUser(user)">
-                <mat-icon>delete</mat-icon>
+                <mat-icon>person_remove</mat-icon>
             </button>
         </td>
     </ng-container>
