--- a/src/app/modules/login/login/login.component.html
+++ b/src/app/modules/login/login/login.component.html
@@ -14,20 +14,24 @@
 
             <mat-form-field>
                 <mat-label>Password</mat-label>
-                <input matInput type="password" formControlName="password">
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+
+                <button
+                mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+              >
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              </button>
 
                 <mat-error *ngIf="loginForm.controls['password'].errors?.['required']">Password is required</mat-error>
                 <mat-error *ngIf="loginForm.controls['password'].errors?.['minlength']">Password must be at least 8 character long</mat-error>
             </mat-form-field>
 
-            <mat-form-field *ngIf="signUp">
-                <mat-label>Confirm Password</mat-label>
-                <input matInput type="password" formControlName="cpassword">
-            </mat-form-field>
-
             <button [disabled]="loginForm.invalid" (click)="login()" mat-raised-button color="primary">Login</button><br><br>
 
-            <a>Create a new account</a>
+            <a [routerLink]="['/signup']">Create a new account</a>
         </form>
     </mat-card-content>
 </mat-card>
