--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>Footer</mat-toolbar-row>
+<mat-toolbar style="background-color: black;">
+    <h4 style="color: white;">Made By Jesus Emilio Vega</h4>
 </mat-toolbar>
